# Simplifier

./: .gitmodules  README.md  Simplifier.sln  q
Bitwuzla/: Bitwuzla.csproj
BitwuzlaDn/: BitwuzlaDn.csproj
EqSat/: Cargo.toml  build-dev.py  test-input.txt
EqSat/Minimization/TruthTables/: 1variable_truthtable.bc  2variable_truthtable.txt  3variable_truthtable.bc  3variable_truthtable.txt  4variable_truthtable.bc  4variable_truthtable.txt
EqSat/egraph/: Cargo.toml
EqSat/egraph/src/: abstract_interpretation.rs  analysis.rs  classification.rs  cost.rs  expr.rs  ffi_utils.rs  main.rs
EqSat/egraph/src/rules/: bitwise_power_of_two.rs  duplicate_children_mul_add.rs  factor_integer_gcd.rs  mod.rs  rewrite_power.rs
EqSat/src/: known_bits.rs  lib.rs  linalg.rs  main.rs  mba.rs  rules.rs  simple_ast.rs  truth_table_database.rs
EqSat/src/assembler/: amd64_assembler.rs  differential_tester.rs  fast_amd64_assembler.rs  iced_amd64_assembler.rs  mod.rs
EqSat/src/dsl/: isle_macros.rs  isle_rules.rs  rules.isle
EqSat/src/fbgb/: bool_poly.rs  buchberger.rs  hamiltonian_paths.rs  mod.rs  multi_bool_poly.rs  npn.rs  splitmix64.rs  system.rs  transforms.rs
EqSat/src/isle/: mba.isle
Mba.Simplifier/: Mba.Simplifier.csproj  SolverWrapper.cs  SynthOpExtensions.cs
Mba.Simplifier/Bindings/: AstCtx.cs  AstIdx.cs  BoolPoly.cs  EGraph.cs  EqualitySaturation.cs  KnownBits.cs  Optimal5.cs  TruthTableDb.cs
Mba.Simplifier/DSL/: CodeBuilder.cs  DslBackend.cs  DslParser.cs  DslPreprocessor.cs  EggBackend.cs  IsleBackend.cs  NewEggBackend.cs  simplification.rules
Mba.Simplifier/FastGb/: BoolGb.cs  BoolPoly.cs
Mba.Simplifier/Fuzzing/: MSiMBAFuzzer.cs  SeededRandom.cs
Mba.Simplifier/Hiera/: HieraSynth.cs
Mba.Simplifier/Jit/: Amd64AssemblerDifferentialTester.cs  Amd64OptimizingJit.cs  FastAmd64Assembler.cs  IAmd64Assembler.cs  IcedAmd64Assembler.cs
Mba.Simplifier/LinEq/: LinearEquation.cs  LinearEquationSolver.cs  LinearSystem.cs  NewtonInterpolation.cs  PolyInverter.cs
Mba.Simplifier/Minimization/: AnfMinimizer.cs  AnfMinimizerV2.cs  BitwiseOrReconstructor.cs  BooleanMinimizer.cs  BooleanTruthTable.cs  DnfMinimizer.cs  EspressoMinimizer.cs  GroebnerBasis.cs  GroebnerMinimizer.cs  SimbaMinimizer.cs  TableDatabase.cs  TruthTable.cs  TruthTableEncoder.cs  (+1 more)
Simplifier/: DatasetTester.cs  JitBenchmark.cs  Program.cs  Simplifier.csproj  Simplifier.sln
(+83 files in other folders)
