[package]
name = "eq-sat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"


[dependencies]
egg = { git = "https://github.com/egraphs-good/egg.git" }
rand = "0.8.5"
libc = "0.2.149"
cranelift-isle = "0.102.1"
ahash = "0.8.11"
mimalloc = { version = "*", default-features = false }
egraph = { path = "./egraph" }
foldhash = "=0.1.0"

[profile.release]
debug = true
debuginfo-level = 2
panic = "abort"
lto = true
codegen-units = 1
