[package]
name = "eq-sat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
egg = { git = "https://github.com/mazeworks-security/egg.git" }
rand = "0.8.5"
libc = "0.2.149"
cranelift-isle = "0.102.1"
ahash = "0.8.11"
mimalloc = { version = "*", default-features = false }
either = "1.15.0"
# egraph = { path = "./egraph" }

[dependencies.iced-x86]
version = "1.21.0"
features = ["code_asm"]

[profile.release]
debug = true
debuginfo-level = 2
lto = true
codegen-units = 256
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
debug = "line-tables-only"
debug-assertions = false
overflow-checks = false
lto = false
incremental = true
codegen-units = 256
panic = "unwind"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3
debug = false
codegen-units = 16

[profile.dev.build-override]
opt-level = 0
debug = false
codegen-units = 256

[build]
rustflags = ["-C", "target-cpu=native"]
